# ocr_project

./: .gitignore  AI-Coding方法论.md  CLAUDE.md  MVP手册.md  README.md  docker-compose.yml  package-lock.json  package.json  开发进度手册.md  技术方案手册.md  需求分析手册.md
backend/: Dockerfile  STARTUP.md  main.py  requirements.txt
backend/api/: __init__.py  auth.py  documents.py  llm.py  ocr_files.py  reviews.py
backend/core/: __init__.py  config.py  database.py
backend/models/: __init__.py  document.py  review_record.py  user.py
backend/ocr/: __init__.py  audit_enhancer.py  number_normalizer.py  table_merger.py  wrapper.py
backend/schemas/: __init__.py  document.py  review.py  user.py
backend/scripts/: backfill_result_json.py
backend/services/: __init__.py  auth_service.py  compare_service.py  document_service.py  export_service.py  llm_service.py  review_service.py
backend/tasks/: __init__.py  document_tasks.py
deploy/: README.md  backup.sh  deploy.sh  manage.sh  production.env.example  production.yml
doc/: ai-coding-log.md  coding.txt  dev-guide.md  pitfalls.md  重难点问题排查思路.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: pdf-test.html
frontend/src/: App.vue  main.js  style.css
nginx/: nginx.conf
opendataloader-pdf-main/: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SUPPORT.md  options.json  package.json  schema.json
opendataloader-pdf-main/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
opendataloader-pdf-main/python/opendataloader-pdf/: .gitignore  hatch_build.py  pyproject.toml
opendataloader-pdf-main/python/opendataloader-pdf-mcp/: README.md  pyproject.toml
opendataloader-pdf-main/python/opendataloader-pdf-mcp/src/opendataloader_pdf_mcp/: __init__.py  server.py
opendataloader-pdf-main/python/opendataloader-pdf-mcp/tests/: conftest.py  test_convert_pdf.py
opendataloader-pdf-main/python/opendataloader-pdf/src/opendataloader_pdf/: __init__.py  __main__.py  cli_options_generated.py  convert_generated.py  hybrid_server.py  runner.py  wrapper.py
opendataloader-pdf-main/python/opendataloader-pdf/tests/: conftest.py  test_cli_options.py  test_convert_integration.py  test_hybrid_server.py  test_hybrid_server_nonblocking.py  test_hybrid_server_partial_success.py  test_hybrid_server_unicode.py
(+261 files in other folders)
