[project]
name = "opendataloader-pdf-mcp"
version = "0.0.0"
description = "MCP server for OpenDataLoader PDF — convert PDFs to Markdown, JSON, HTML, and more"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "opendataloader-pdf",
]

[project.scripts]
opendataloader-pdf-mcp = "opendataloader_pdf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opendataloader_pdf_mcp"]
